icon size h/v align fix

--- a/design/default.css
+++ b/design/default.css
@@ -109,38 +109,45 @@ span>i {
 }
 
 .filter__choice>i {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     position: absolute;
     left: -0.2em;
     color: #0065fc;
     background: #deebff;
-    padding: 1em;
+    padding: 1.4em;
     border-radius: 50%;
     font-size: 0.95em;
+    width: 24px;
+    height: 24px;
 }
 
 .filter__choice>p {
     padding-left: 3.2em;
     font-weight: bold;
     font-size: 0.94em;
-    border: 0.2rem solid #f2f2f2;
+    border: 0.15rem solid #f2f2f2;
     border-radius: 1.9em;
     padding: 0.7em 0.7em 0.7em 3em;
 }
 
 .filter__choice>p:hover,
 .filter__choice>p:active {
+    cursor: pointer;
     color: #0065fc;
     background: #deebff;
-    border: 0.2rem solid #deebff;
+    border: 0.15rem solid #deebff;
 }
 
 .choiceBox {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    align-content: start;
+    align-items: flex-start;
+    justify-content: flex-start;
     max-height: 13em;
-    margin-top: 0.2em;
+    margin: 0.5em auto;
 }
 
 .info {
